# Napitochki

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
backend/: Cargo.toml  Dockerfile
backend/assets/: co_occurrence_edges.json  co_occurrence_vertices.json
backend/src/: categories.rs  chroma_utils.rs  clip.rs  main.rs  model.rs  mongo_utils.rs
data/: combined_embeddings_data.csv  image_embeddings_data.csv  text_embeddings_data.csv
data_collection/: drink_urls.json  parsing.ipynb
data_exploration/: EDA.ipynb  co_occurrence.html
data_processing/: add_clustering_data.ipynb  extract_embeddings.ipynb  extract_tastes.ipynb
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: drinks.js
frontend/src/components/: CLusterSummary.jsx  ClusterSummary.css  DrinkInfo.css  DrinkInfo.jsx  DrinkList.jsx  DrinkVisualization.css  DrinkVisualization.jsx  DrinksVisualization.css  FlavorExplorer.css  FlavorExplorer.jsx  Graph.css  Graph.jsx  IngredientGraph.css  IngredientGraph.jsx  Sidebar.jsx  SimilaritySearch.jsx
frontend/src/components/visualizations/: HoneycombChart.css  HoneycombChart.jsx  NetworkGraph.css  NetworkGraph.jsx  ScatterPlot.css  ScatterPlot.jsx
frontend/src/services/: api.js
frontend/src/utils/: clusterDescriptions.js
