[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.3.0"
futures = "0.3"
serde_with = "2.0"
axum = "0.6"
tower = "0.4"
hyper = "0.14"
dotenvy="0.15.7"
serde_json="1.0.140"