[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.3.0"
bson = "2.3.0"
futures = "0.3"
serde_with = "2.0"
axum = "0.6"
tower = "0.4"
hyper = "0.14"
dotenvy="0.15.7"
serde_json="1.0.140"
embed_anything="0.5.5"
candle-core="0.8.4"
strum = "0.27"
strum_macros = "0.27"
chromadb="2.0.0"

[profile.release]
strip = true
lto = true
panic = 'abort'
opt-level = 3
codegen-units = 4